test/expected/declare_fmf_v.out
declare f as friend member function
             ^
14: error: "friend": unsupported keyword in C
